# Temper-ML

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: temper-gate.yml
docs/handoffs/: 2026-07-09-v1-implementation-handoff.md  2026-07-11-v1-foundation-handoff.md  2026-07-12-v1-slices-1-2-handoff.md  2026-07-17-v1-slice-7-handoff.md  2026-07-18-v1-slice-8-handoff.md  2026-07-19-v1-slice-9-handoff.md
schemas/identity-projections/: core-domain-v1.json  registry.schema.json
schemas/public/: public-dump-v1.schema.json
schemas/records/: adapter_export.schema.json  artifact.schema.json  artifact_availability.schema.json  base_model_revision.schema.json  baseline_policy.schema.json  cleanup_receipt.schema.json  common.schema.json  compatibility_group.schema.json  dataset_version.schema.json  evaluation_result.schema.json  evaluation_suite.schema.json  execution_target.schema.json  experiment.schema.json  experiment_derivation.schema.json  hardware_capability_profile.schema.json  hardware_requirements.schema.json  local_use_session.schema.json  manifest_diff.schema.json  project.schema.json  project_policy.schema.json  recipe.schema.json  recipe_resolution.schema.json  recommendation.schema.json  recommendation_policy.schema.json  resolved_runtime_request.schema.json  review.schema.json  run.schema.json  task_definition.schema.json  user_decision.schema.json
scripts/: codex-cloud-maintenance.sh  codex-cloud-setup.sh  temper-fixture-walkthrough.sh  temper-gate.py  temper-workflow.py
src/temper_ml/: __init__.py  cli.py  filesystem.py
(+137 files in other folders)
